Fix page alignment center

--- a/public/assets/scss/appHeader.scss
+++ b/public/assets/scss/appHeader.scss
@@ -63,7 +63,6 @@ h1 a.router-link-active {
 }
 
 header nav {
-  width: 80%;
   margin: auto;
   display: flex;
   justify-content: space-between;
