--- a/public/assets/scss/kittenCard.scss
+++ b/public/assets/scss/kittenCard.scss
@@ -1,4 +1,5 @@
 .card {
+  display: flex;
   width: calc(80% / 5);
   height: auto;
   padding: 0.5em;
