--- a/public/assets/scss/kittenCarousel.scss
+++ b/public/assets/scss/kittenCarousel.scss
@@ -1,8 +1,6 @@
 .carousel {
   position: relative;
-  width: 80%;
   overflow: hidden;
-  margin: 0 auto;
 
   .carousel-track-container {
     display: flex;
