--- a/public/assets/scss/kittenFilterBy.scss
+++ b/public/assets/scss/kittenFilterBy.scss
@@ -6,7 +6,6 @@ $checkbox-background: #fff;
   display: flex;
   align-items: center;
   margin: 0 auto;
-  width: 80%;
 
   input[type='checkbox'] {
     position: relative;
