--- a/public/assets/scss/kittenSortBy.scss
+++ b/public/assets/scss/kittenSortBy.scss
@@ -14,8 +14,6 @@ $radio-background: #fff;
   display: flex;
   flex-direction: row;
   gap: 2em;
-  margin: 16px auto;
-  width: 80%;
 
   .sort-by-radio {
     display: flex;
